--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
         "swagger-ui-express": "^4.4.0",
         "underscore": "^1.13.4",
         "yamljs": "^0.3.0"
+    },
+    "devDependencies": {
+        "eslint": "^8.18.0"
     }
 }
