--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
     "database": "desenvolvimento",
     "host": "127.0.0.1",
     "dialect": "postgres",
-    "operatorsAliases": false
+    "operatorsAliases": 0
   },
   "production": {
     "username": "thiagoghion",
@@ -13,7 +13,7 @@
     "database": "desenvolvimento",
     "host": "127.0.0.1",
     "dialect": "postgres",
-    "operatorsAliases": false,
+    "operatorsAliases": 0,
     "use_env_variable": "DATABASE_URL"
   }
 }
