--- a/package.json
+++ b/package.json
@@ -1,41 +1,53 @@
 {
-    "name": "api-agendador-consulta",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/thiago-ghion/api-agendador-consulta.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/thiago-ghion/api-agendador-consulta/issues"
-    },
-    "homepage": "https://github.com/thiago-ghion/api-agendador-consulta#readme",
-    "dependencies": {
-        "body-parser": "^1.20.0",
-        "cors": "^2.8.5",
-        "express": "^4.18.1",
-        "jsonwebtoken": "^8.5.1",
-        "moment": "^2.29.3",
-        "passport": "^0.6.0",
-        "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0",
-        "pg": "^8.7.3",
-        "pg-hstore": "^2.3.4",
-        "sequelize": "^6.21.0",
-        "sequelize-cli": "^6.4.1",
-        "swagger-ui-express": "^4.4.0",
-        "underscore": "^1.13.4",
-        "yamljs": "^0.3.0"
-    },
-    "devDependencies": {
-        "eslint": "^8.18.0"
-    }
+  "name": "api-agendador-consulta",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "eslintIgnore": [
+    "*.spec.js"
+  ],
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/__test__/"
+    ]
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "./node_modules/.bin/jest --coverage"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thiago-ghion/api-agendador-consulta.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thiago-ghion/api-agendador-consulta/issues"
+  },
+  "homepage": "https://github.com/thiago-ghion/api-agendador-consulta#readme",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "logform": "^2.4.2",
+    "moment": "^2.29.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.0",
+    "sequelize-cli": "^6.4.1",
+    "swagger-ui-express": "^4.4.0",
+    "triple-beam": "^1.3.0",
+    "underscore": "^1.13.4",
+    "winston": "^3.8.1",
+    "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.18.0",
+    "jest": "^28.1.2"
+  }
 }
